[package]
name = "async_io_demo_rs"
version = "0.1.0"
authors = ["thomas yang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humansize = "1.1.1"
dunce = "1.0.2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
